--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-/target/
+! /target/
+!/target/employee-demo-0.0.1-SNAPSHOT.jar
 !.mvn/wrapper/maven-wrapper.jar
+/target/**
 
 ### STS ###
 .apt_generated
